<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:id="@+id/many_map_rel"
	android:layout_height="match_parent">
<fragment
	android:name="uk.colessoft.android.hilllist.ui.fragment.ListHillsMapFragment"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:id="@+id/hills_map_fragment">
</fragment>

	<ToggleButton android:id="@+id/satellite_button"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:textOn="@string/satellite_button" android:textOff="@string/satellite_button"
		android:layout_alignParentRight="true" />

</RelativeLayout>

