...
    <string name="pick_file">Pick File</string>
    <string name="pick_folder">Pick Folder</string>
    <string name="app_name">British Hills</string>
    <string name="list_alpha">List Alphabetically</string>
    <string name="list_by_height">List by height</string>
    <string name="list_by_distance">List by Distance</string>
    <string name="show_map">Show hills on Map</string>
    <string name="satellite_button">Sat</string>
    <string name="search">Search</string>
    <string name="search_list">Search Hill List</string>
    <string name="save_selections">Save</string>
    <string name="label_name"><b>Name</b></string>
    <string name="label_height"><b>Height</b></string>
...
    <string name="label_osgrid"><b>OS Grid Reference</b></string>
    <string name="label_os50k"><b>1:50K Map</b></string>
    <string name="label_os25k"><b>1:25K Map</b></string>
    <string name="label_section"><b>Section</b></string>
    <string name="label_summit_feature"><b>Summit Feature</b></string>
    <string name="label_classification"><b>Classifications</b></string>
    <string name="label_munros"><b>Munros</b></string>
    <string name="label_munro_tops"><b>Munro Tops</b></string>
    <string name="label_murdos"><b>Murdos</b></string>
    <string name="label_corbetts"><b>Corbetts</b></string>
    <string name="label_corbett_tops"><b>Corbett Tops</b></string>
    <string name="label_grahams"><b>Grahams</b></string>
    <string name="label_graham_tops"><b>Graham Tops</b></string>
...
