<?xml version="1.0" encoding="utf-8"?>
<!-- testing -->
<!--<com.google.android.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/many_map_view" android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:enabled="true" android:clickable="true" android:apiKey="0WkjGtrJFQkvRGDHGHPHmIYQWGTh48mvgixldDA"
	/> -->

<!-- production -->
 <com.google.android.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/many_map_view" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:enabled="true"
	android:clickable="true" android:apiKey="0WkjGtrJFQktBbukxd_AgW4VcOrha8cXTw6NjCQ" />