...

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="23">

		<TextView   style="@style/ButtonText" android:background="@drawable/button_text"
			android:layout_width="0dp" android:layout_weight="33"
			android:text="@string/label_munros" android:id="@+id/munros"
			android:padding="5dip" android:layout_margin="1dip"
			android:layout_height="match_parent" />

		<TextView   style="@style/ButtonText" android:background="@drawable/button_text"
			android:layout_width="0dp" android:layout_weight="33"
			android:text="@string/label_munro_tops" android:id="@+id/munro_tops"
...
